--- a/index.html
+++ b/index.html
@@ -1,13 +1,5 @@
 ---
-title: Home
+layout: default
+metaTitle: Grønlandsk parlør
 ---
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>{{ page.title }}</title>
-  </head>
-  <body>
-    <h1>{{ "Hello World!" | downcase }}</h1>
-  </body>
-</html>
+<h1>Parlør-app</h1>
