--- a/index.html
+++ b/index.html
@@ -3,3 +3,12 @@ layout: default
 metaTitle: Grønlandsk parlør
 ---
 <h1>Parlør-app</h1>
+
+<h2>Parlør</h2>
+<ul>
+{% for group in site.grupper %}
+    <li>
+        <a href="{{group.url | relative_url}}">{{ group.onPageTitle }}</a>
+    </li>
+  {% endfor %}
+  </ul>
